--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    border: 0;
+    border: none;
 }
 
 body{
@@ -29,8 +29,13 @@ header a{
     margin-left: 25px;
     font-weight: regular;  
     font-size: 16px;  
-    color: gray;
-   
+    color: gray;   
+}
+
+header a:hover{
+    color: black;
+    font-weight: bold;
+    transition: 1s;
 }
 
 header .logo img{
@@ -92,6 +97,7 @@ footer{
 .cards{
     max-width: 900px;
     margin: 0 auto;
+    margin-top: 55px;
     display: grid; 
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
@@ -99,6 +105,7 @@ footer{
 
 .card{
     color: black;
+    cursor: pointer;
 }
 
 .card .img img{
@@ -117,4 +124,99 @@ footer{
     color: gray;
 }
 
+/*=== ABOUT ===*/
 
+.about, 
+.story,
+.our-recipes{
+    width: 900px;
+    margin: 0 auto;
+}
+
+.about, 
+.our-recipes p{
+    color: rgb(87, 83, 83);
+    line-height: 23px;
+    margin-bottom: 20px;
+}
+
+.about p + p{
+    margin-top: 13px;
+}
+
+.story p{
+    color: rgb(87, 83, 83);
+    line-height: 23px;
+}
+.story p + p{
+    margin-top: 13px;
+}
+
+.about h1{
+    font-size: 25px;
+    margin-top: 35px;
+    margin-bottom: 20px;
+    color: black;
+    
+}
+
+.story h2{
+    margin-top: 20px;
+    color: black;
+    margin-bottom: 20px;
+    font-size: 20px;
+}
+.our-recipes h2{
+    margin-top: 20px;
+    color: black;
+    margin-bottom: 20px;
+    font-size: 20px;
+}
+
+/*=== MODAL ===*/
+
+.modal-overlay{
+    background-color: rgba(0, 0, 0, 0.9);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal{
+    background-color: white;
+    border-radius: 10px;
+    width: 50%;
+    height: 60%;
+    margin: 15vh auto;
+    position: relative;
+}
+
+.modal .close-modal{
+    color: gray;
+    font-size: 14px;
+    position: absolute;
+    right: 300px;
+    bottom: 40px;
+    cursor: pointer;
+}
+
+/*=== MODAL ACTIVE ==*/
+
+.modal-overlay.active{
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal-content img{
+    width: 65%;
+    height: 60%;
+    border-radius: 20px;
+    top: 20px;
+    left: 115px;
+    position: absolute;
+    box-sizing: border-box ;
+  
+}
