--- a/style.css
+++ b/style.css
@@ -217,6 +217,24 @@ footer{
     top: 20px;
     left: 115px;
     position: absolute;
-    box-sizing: border-box ;
-  
+    box-sizing: border-box ;  
+}
+
+.modal-content .title{
+    color:black;
+    font-size: 18px;
+    width: 100%;
+    position: absolute;
+    top: 290px;
+    left: 120px;
+}
+
+.modal-content .info{
+    color: gray;
+    font-weight: normal;
+    font-size: 15px;
+    width: 100%;
+    position: absolute;
+    bottom: 85px;
+    left: 120px;
 }
