--- a/views/recipes.njk
+++ b/views/recipes.njk
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout.njk" %}
 
 {% block head %}
 <title>Foodfy Vegan - Recipes</title>    
@@ -16,138 +16,19 @@
     </ul>
     </div>
     <section class="cards">         
-    <div class="card" data-id="vegetarian" id="1583427548973-3dc79cd09fd4">
+        {% for item in items %}
+    <div class="card" data-id="{{item.dataId}}" id="{{item.id}}">
         <div class="img">
-            <img src="https://images.unsplash.com/photo-1583427548973-3dc79cd09fd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Veggie Pizza">
+            <img src="https://images.unsplash.com/photo-{{item.id}}?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="{{item.title}}">
         </div>
         <div class="content">
-            <p>Veggie Pizza</p>
+            <p>{{item.title}}</p>
         </div>
         <div class="info">
-            <p>By Maria Bern</p>
+            <p>By {{item.chef}}</p>
         </div>
     </div>
-    <div class="card" data-id="vegetarian" id="1551892269-860b1e482f98">
-        <div class="img">
-            <img src="https://images.unsplash.com/photo-1551892269-860b1e482f98?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Eggplant Lasagna">
-        </div>
-        <div class="content">
-            <p>Eggplant Lasagna</p>
-        </div>
-        <div class="info">
-            <p>By Flora Flores</p>
-        </div>
-    </div>
-    <div class="card" data-id="vegan"id="1546441471-c81f0586d0a9">
-        <div class="img">
-            <img src="https://images.unsplash.com/photo-1546441471-c81f0586d0a9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1052&q=80" alt="Pea Burger">
-        </div>
-        <div class="content">
-            <p>Pea Burger</p>
-        </div>
-        <div class="info">
-            <p>By Lila Olinda</p>
-        </div>
-    </div>
-    <div class="card" data-id="vegan" id="1536096119648-4cbab718f351">
-        <div class="img">
-            <img src="https://images.unsplash.com/photo-1536096119648-4cbab718f351?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80" alt="Mushroom pasta">
-        </div>
-        <div class="content">
-            <p>Mushroom Pasta</p>
-        </div>
-        <div class="info">
-            <p>By Manuella Nadege</p>
-        </div>
-    </div>
-    <div class="card" data-id="vegetarian" id="1561043433-aaf687c4cf04">
-        <div class="img">
-            <img src="https://images.unsplash.com/photo-1561043433-aaf687c4cf04?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Green Salad">
-        </div>
-        <div class="content">
-            <p>Green Salad</p>
-        </div>
-        <div class="info">
-            <p>By Marina Lin</p>
-        </div>
-    </div>
-    <div class="card" data-id="vegan" id="1543573852-1a71a6ce19bc">
-        <div class="img">
-            <img src="https://images.unsplash.com/photo-1543573852-1a71a6ce19bc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Red Fruits Smooth">
-        </div>
-        <div class="content">
-            <p>Red Fruits Smooth</p>
-        </div>
-        <div class="info">
-            <p>By Theo Lindo</p>
-        </div>
-    </div>
-    <div class="card" data-id="vegetarian" id="1583427548973-3dc79cd09fd4">
-        <div class="img">
-            <img src="https://images.unsplash.com/photo-1583427548973-3dc79cd09fd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Veggie Pizza">
-        </div>
-        <div class="content">
-            <p>Veggie Pizza</p>
-        </div>
-        <div class="info">
-            <p>By Maria Bern</p>
-        </div>
-    </div>
-    <div class="card" data-id="vegetarian" id="1551892269-860b1e482f98"> 
-        <div class="img">
-            <img src="https://images.unsplash.com/photo-1551892269-860b1e482f98?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Eggplant Lasagna">
-        </div>
-        <div class="content">
-            <p>Eggplant Lasagna</p>
-        </div>
-        <div class="info">
-            <p>By Flora Flores</p>
-        </div>
-    </div>
-    <div class="card" data-id="vegan" id="1546441471-c81f0586d0a9">
-        <div class="img">
-            <img src="https://images.unsplash.com/photo-1546441471-c81f0586d0a9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1052&q=80" alt="Pea Burger">
-        </div>
-        <div class="content">
-            <p>Pea Burger</p>
-        </div>
-        <div class="info">
-            <p>By Lila Olinda</p>
-        </div>
-    </div>
-    <div class="card" data-id="vegan" id="1536096119648-4cbab718f351">
-        <div class="img">
-            <img src="https://images.unsplash.com/photo-1536096119648-4cbab718f351?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80" alt="Mushroom pasta">
-        </div>
-        <div class="content">
-            <p>Mushroom Pasta</p>
-        </div>
-        <div class="info">
-            <p>By Manuella Nadege</p>
-        </div>
-    </div>
-    <div class="card" data-id="vegetarian" id="1561043433-aaf687c4cf04">
-        <div class="img">
-            <img src="https://images.unsplash.com/photo-1561043433-aaf687c4cf04?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Green Salad">
-        </div>
-        <div class="content">
-            <p>Green Salad</p>
-        </div>
-        <div class="info">
-            <p>By Marina Lin</p>
-        </div>
-    </div>
-    <div class="card" data-id="vegan" id="1543573852-1a71a6ce19bc">
-        <div class="img">
-            <img src="https://images.unsplash.com/photo-1543573852-1a71a6ce19bc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Red Fruits Smooth">
-        </div>
-        <div class="content">
-            <p>Red Fruits Smooth</p>
-        </div>
-        <div class="info">
-            <p>By Theo Lindo</p>
-        </div>
-    </div>
+        {% endfor %}
     </section>   
 
     <div class="modal-overlay">
