--- a/views/layout.njk
+++ b/views/layout.njk
@@ -14,7 +14,7 @@
 <body>
     <header>
        <div class="logo">
-           <img src="/assets/logovegan4.png" alt="Foodfy Vegan">   
+           <a href="/"><img src="/assets/logovegan4.png" alt="Foodfy Vegan"></a>           
            <a href="/about">About</a>
            <a href="/recipes">Recipes</a>        
        </div>
